# tssmove_eval

./: .env.example  README.md  pyproject.toml
data/: TSS-MoVe_Testdaten_Fragestellungen.csv  ab_test_blind.csv  ab_test_key.csv  ab_test_voting_results.xlsx
data/Eval_Dataset_Results_v2/: agent_trace-20260409T200307Z-2f02d5685b94968d.json  agent_trace-20260409T200307Z-2f02d5685b94968d.md  agent_trace-20260409T200630Z-923f3641b8d687a7.json  agent_trace-20260409T200630Z-923f3641b8d687a7.md  agent_trace-20260409T201102Z-d5373616a34baeb0.json  agent_trace-20260409T201102Z-d5373616a34baeb0.md  agent_trace-20260409T201540Z-11b6f0bb5f47c5c0.json  agent_trace-20260409T201540Z-11b6f0bb5f47c5c0.md  agent_trace-20260409T202005Z-cbaf62ed0f6b54bd.json  agent_trace-20260409T202005Z-cbaf62ed0f6b54bd.md  agent_trace-20260409T202419Z-6b4a952e0f9738f3.json  agent_trace-20260409T202419Z-6b4a952e0f9738f3.md  agent_trace-20260409T202914Z-5297efb5b28943f6.json  agent_trace-20260409T202914Z-5297efb5b28943f6.md  agent_trace-20260409T203220Z-695e92f8f8c90186.json  agent_trace-20260409T203220Z-695e92f8f8c90186.md  agent_trace-20260409T203511Z-47e6e3c43e12218c.json  agent_trace-20260409T203511Z-47e6e3c43e12218c.md  agent_trace-20260409T204534Z-0b04d29d7b6848dd.json  agent_trace-20260409T204534Z-0b04d29d7b6848dd.md  agent_trace-20260409T204937Z-29cf642d9bce24ab.json  agent_trace-20260409T204937Z-29cf642d9bce24ab.md  agent_trace-20260409T205300Z-d9492642d1b9837a.json  agent_trace-20260409T205300Z-d9492642d1b9837a.md  agent_trace-20260409T205822Z-f665bfd3c55f9f66.json  agent_trace-20260409T205822Z-f665bfd3c55f9f66.md  agent_trace-20260409T210210Z-4a1c14ac69e6c6a2.json  agent_trace-20260409T210210Z-4a1c14ac69e6c6a2.md  agent_trace-20260409T210733Z-87dae215bfc513cc.json  agent_trace-20260409T210733Z-87dae215bfc513cc.md  agent_trace-20260409T211245Z-5d2e50ddafa92ea4.json  agent_trace-20260409T211245Z-5d2e50ddafa92ea4.md  agent_trace-20260409T211839Z-d372860ef5f1e2e1.json  agent_trace-20260409T211839Z-d372860ef5f1e2e1.md  agent_trace-20260409T212329Z-ac422e4748fea226.json  agent_trace-20260409T212329Z-ac422e4748fea226.md  agent_trace-20260409T212718Z-16c68149446212df.json  agent_trace-20260409T212718Z-16c68149446212df.md  agent_trace-20260409T213236Z-857e8821bb5a7e1c.json  agent_trace-20260409T213236Z-857e8821bb5a7e1c.md  (+10 more)
data/Eval_Dataset_Results_v3/: agent_trace-20260413T165203Z-7adc4321497a1f07.json  agent_trace-20260413T165203Z-7adc4321497a1f07.md  agent_trace-20260413T165533Z-76ca51eeb0261b2c.json  agent_trace-20260413T165533Z-76ca51eeb0261b2c.md  agent_trace-20260413T165910Z-68f62c571946d936.json  agent_trace-20260413T165910Z-68f62c571946d936.md  (+44 more)
datasets/: rag_eval_dataset_Antwort_vs_ChatGPTBezug.csv
experiments/: Antwort_vs_ChatGPTBezug.csv  Antwort_vs_ChatGPTGeneric.csv
(+78 files in other folders)
